tests/sema/fail/v8_fail_fstring_struct.ep
# COMPILE_FAIL: f-string expression expected str, integer, bool, or u8[], got Val

type Val = {
    val: i64
}

fun run(): i64 {
    println(f"value {new Val { val: 3 }}")
    ret 0
}

fun main(): void {
    exit(run())
}

